--- a/itinerario-frontend/src/components/GenericComponents/FlightCard/FlightCard.css
+++ b/itinerario-frontend/src/components/GenericComponents/FlightCard/FlightCard.css
@@ -7,8 +7,8 @@
 }
 
 .selected{
-    border: 10px solid green;
+    border: 1px solid #1976d2;
 }
 .unselected{
-    border: "";
+    border: 1px solid #424242;
 }
