--- a/itinerario-frontend/src/components/GenericComponents/FlightCard/FlightCard.css
+++ b/itinerario-frontend/src/components/GenericComponents/FlightCard/FlightCard.css
@@ -1,14 +1,11 @@
-.rotarDcha {
+.rotateRight {
     transform: rotate(90deg);
-}
-
-.rotarIzq {
-    transform: rotate(270deg);
 }
 
 .selected{
     border: 2px solid #1976d2;
 }
+
 .unselected{
-    border: 1px solid #424242;
+    border: 2px solid #505050;
 }
